# sportsx-solana-contract

./: .gitignore  Anchor.toml  BACKEND_SIGNATURE.md  CHANGES_SUMMARY.md  CONTRACT_API.md  Cargo.toml  DELAYED_MINT_REFACTOR.md  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVNET_ADDRESSES.txt  FOR_FRONTEND_TEAM.md  FRONTEND_INTEGRATION.md  FRONTEND_PACKAGE.md  README.md  package.json  tsconfig.json  workflow.md
.git-ticketing-backup/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git-ticketing-backup/logs/: HEAD
.git-ticketing-backup/logs/refs/heads/: pluto
.git-ticketing-backup/logs/refs/heads/feature/: decentralized-ticketing
.git-ticketing-backup/logs/refs/remotes/origin/: HEAD  pluto
.git-ticketing-backup/logs/refs/remotes/origin/feature/: decentralized-ticketing
.git-ticketing-backup/objects/pack/: pack-e36dc3a60c487566c5b44856cac7c8014ebb9c40.idx  pack-e36dc3a60c487566c5b44856cac7c8014ebb9c40.pack  pack-e36dc3a60c487566c5b44856cac7c8014ebb9c40.rev
.git-ticketing-backup/refs/heads/: main
.git-ticketing-backup/refs/heads/feature/: decentralized-ticketing
doc/mermaid/: Purchase_Minting.mmd  Resale.mmd  Scanning.mmd
idls/: sportsx_pof.json
migrations/: deploy.ts  initialize.ts
programs/sportsx-checkin/: Cargo.toml
programs/sportsx-checkin/src/: lib.rs
programs/sportsx-pof/: Cargo.toml
programs/sportsx-pof/src/: lib.rs
programs/ticketing_program/: Cargo.toml
programs/ticketing_program/src/: errors.rs  lib.rs
programs/ticketing_program/src/instructions/: checkin.rs  event.rs  marketplace.rs  mod.rs  platform.rs  pof_integration.rs  purchase.rs  ticket_management.rs
programs/ticketing_program/src/state/: checkin_authority.rs  event.rs  listing.rs  mod.rs  nonce_tracker.rs  platform_config.rs  ticket.rs  ticket_authority.rs  ticket_extension.rs  ticket_type.rs
programs/ticketing_program/src/utils/: mod.rs  nft_creator.rs
scripts/: authorize-checkin.ts  authorize-contract.ts  authorize-ticket.ts  check-accont.js  create-platform-ata.ts  deploy-init.js  get-user-activity-example.md  get-user-activity.js  initialize-devnet-ticket.ts  initialize-devnet-ticketing-system.ts  pof-and-checkin-deploy-init.ts  update-backend-authority.ts  update-platform-token-accont.ts  update-platform-wallets.ts
tests/: sportsx-checkin.ts  sportsx-pof.ts  ticketing.ts
