[package]
name = "sportsx-checkin"
version = "0.1.0"
description = "SportsX Daily Check-in Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sportsx_checkin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
sportsx-pof = { path = "../sportsx-pof", features = ["cpi"] }

