[package]
name = "sportsx-pof"
version = "0.1.0"
description = "SportsX Proof of Fandom (PoF) Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sportsx_pof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"

