[package]
name = "ticketing_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketing_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
spl-token = { version = "4.0.1", features = [ "no-entrypoint" ] }
spl-token-2022 = { version="6", features = [ "no-entrypoint" ] }
spl-token-metadata-interface = "^0.6.0"
solana-program = "=2.1.15"
