[package]
name = "ticketing_program"
version = "0.1.0"
description = "SportsX Ticketing Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketing_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"

