[package]
name = "ticketing_program"
version = "0.1.0"
description = "SportsX Ticketing Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketing_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = { version="6", features = [ "no-entrypoint" ] }
spl-token = { version = "4.0.1", features = [ "no-entrypoint" ] }

[dev-dependencies]
# Temporarily disabled due to yanked dependencies
# solana-program-test = "1.18.0"
# solana-sdk = "1.18.0"

